--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!doctype html>
-<html lang="">
-
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="icon" href="/vue241126/favicon.ico">
-  <title>안광욱-vue-project-2024.11.26</title>
-  <script defer="defer" src="/vue241126/js/chunk-vendors.0d013cee.js"></script>
-  <script defer="defer" src="/vue241126/js/app.10847073.js"></script>
-  <link href="/vue241126/css/app.84087396.css" rel="stylesheet">
-</head>
-
-<body><noscript><strong>We're sorry but vue-project doesn't work properly without JavaScript enabled. Please enable it
-      to continue.</strong></noscript>
-  <div id="app"></div>
-</body>
-
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/vue241126/favicon.ico"><title>vue-project</title><script defer="defer" src="/vue241126/js/chunk-vendors.bb17a332.js"></script><script defer="defer" src="/vue241126/js/app.e55d88de.js"></script><link href="/vue241126/css/app.30844efc.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but vue-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
